welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugSnail:33: error: Unmatched closing brace '}' ignored here
}
^